--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 
+spring.datasource.url=jdbc:mysql://localhost:3306/dojos_ninjas?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=D473nB4nk!_!
+spring.jpa.hibernate.ddl-auto=update
+spring.mvc.hiddenmethod.filter.enabled=true
+spring.mvc.view.prefix=/WEB-INF/
+
+#Log sentencias SQL
+logging.level.org.hibernate.SQL=DEBUG
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.type=TRACE
