--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/dojos_ninjas?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=D473nB4nk!_!
+spring.datasource.username=${root}
+spring.datasource.password=${pswd}
 spring.jpa.hibernate.ddl-auto=update
 spring.mvc.hiddenmethod.filter.enabled=true
 spring.mvc.view.prefix=/WEB-INF/
@@ -9,4 +9,5 @@ spring.mvc.view.prefix=/WEB-INF/
 #Log sentencias SQL
 logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.type=TRACE
+#logging.level.org.hibernate.type=TRACE
+
